# dumb_math

./: CMakeLists.txt  README.md  readme.md
.github/: Dockerfile
.github/workflows/: docker-build.yml  logarithm_ci.yaml
include/: dumb_math.hpp
include/dumb_math/common/: get_floating_parts.hpp
include/dumb_math/detail/: calc_ulp_error.hpp
lib/: cxxopts.hpp
modules/benchmarking/: CMakeLists.txt
modules/benchmarking/env_setup/: restore_cpu_state.sh  run_max_priority.sh  set_performance.sh
modules/benchmarking/include/benchmarking/: common.hpp  latency_test.hpp
modules/benchmarking/src/: common.cpp
modules/benchmarking/stat_plot/: spline.py
modules/logarithm/: CMakeLists.txt  readme.md
modules/logarithm/include/logarithm/: logarithm.hpp  lookup_table_item.hpp  tailor.hpp
modules/logarithm/include/logarithm/common/: approx.hpp
modules/logarithm/tests/: CMakeLists.txt
modules/logarithm/tests/common/: calc_ln_ulp_err.hpp
modules/logarithm/tests/statistics/: CMakeLists.txt  config.hpp.in
modules/logarithm/tests/statistics/src/: main.cpp  plot_stat.gp  stat_generator.hpp
modules/logarithm/tests/unit/: CMakeLists.txt
modules/logarithm/tests/unit/src/: test_special.cpp  test_ulp_error.cpp
modules/logarithm/tools/lookup_table_builder/: CMakeLists.txt
modules/logarithm/tools/lookup_table_builder/include/lookup_table_builder/: lookup_table_builder.hpp
modules/logarithm/tools/lookup_table_builder/src/: lookup_table_builder.cpp  lookup_table_printer.cpp  main.cpp
modules/logarithm/tools/lookup_table_builder/tools/cmd_options/: cmd_options.cpp  cmd_options.hpp
modules/matrix/: CMakeLists.txt
modules/matrix/include/matrix/: matrix.hpp
modules/matrix/include/matrix/detail/: matrix_data_allocator.h
modules/matrix/src/: matrix.cpp
modules/matrix/tests/: CMakeLists.txt
modules/matrix/tests/performance/: CMakeLists.txt
modules/matrix/tests/performance/src/: latency.cpp
modules/performance_test/: CMakeLists.txt
modules/performance_test/include/performance_test/: common.hpp  latency_test.hpp
modules/random/: CMakeLists.txt  readme.md
modules/random/generators/: readme.md
modules/random/generators/bivariate_normal_generator/: CMakeLists.txt
modules/random/generators/bivariate_normal_generator/include/bivariate_normal_generator/: bivariate_normal_generator.hpp
modules/random/generators/chi_sq_generator/: CMakeLists.txt
modules/random/generators/chi_sq_generator/include/chi_sq_generator/: chi_sq_generator.hpp
modules/random/generators/chi_sq_generator/utils/: plot_chi.gp
modules/random/generators/rnd_bit_generators/: CMakeLists.txt
modules/random/generators/rnd_bit_generators/include/rnd_bit_generators/: mrg32k3a.hpp
modules/random/generators/rnd_normal_generator/: CMakeLists.txt
modules/random/generators/rnd_normal_generator/include/rnd_normal_generator/: rnd_normal_generator.hpp
modules/random/test_battery/: CMakeLists.txt  readme.md
modules/random/test_battery/first_level_tests/: CMakeLists.txt
modules/random/test_battery/first_level_tests/include/first_level_tests/: disjoint_vectors.hpp  fourier_tester.hpp  ifirst_level_tester.hpp
modules/random/test_battery/first_level_tests/src/: disjoint_vectors.cpp  fourier_tester.cpp
modules/random/test_battery/two_level_test/: CMakeLists.txt
modules/random/test_battery/two_level_test/include/two_level_test/: two_level_tester.hpp
modules/random/test_battery/two_level_test/src/: two_level_tester.cpp
modules/random/test_battery/uniformity_tests/: CMakeLists.txt
modules/random/test_battery/uniformity_tests/include/uniformity_tests/: iuniformity_tester.hpp  ks_uniformity_tester.hpp
modules/random/test_battery/utils/: CMakeLists.txt
modules/random/test_battery/utils/include/utils/: bounds_check.hpp  generate_bit_seq.hpp
modules/random/test_battery/utils/include/utils/math/: fft.hpp
modules/random/test_battery/utils/tests/: CMakeLists.txt
modules/random/test_battery/utils/tests/src/: test_fft.cpp
modules/random/variance_calc/: CMakeLists.txt  readme.md
modules/random/variance_calc/include/variance_calc/: variance_calculator.hpp
